# plotit

./: .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md
client/: Cargo.toml
client/src/: _main.rs  chart.rs  data.rs  lib.rs  main.rs  ws.rs
client/static/: chartjs-plugin-downsample.min.js  index.html
client/static/onseui/unpkg.com/onsenui/css/: onsenui.css
server/: Cargo.toml
server/src/: main.rs  noise.rs  test.rs
