[package]
name = "client"
version = "0.1.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"

[dependencies]
yew = { git = "https://github.com/DenisKolodin/yew.git" }
stdweb = "0.4.9"
failure = "0.1.2"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
crossbeam = "0.4.1"