[package]
name = "server"
version = "0.1.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"

[[bin]]
name = "plotit"
path = "src/main.rs"

[[bin]]
name = "noise"
path = "src/noise.rs"

[dependencies]
client = { path = "../client"}
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = "0.3.17"
websocket = "0.20.2"
failure = "0.1.2"
crossbeam = "0.4.1"
rand = "0.5.5"
float_duration = "0.3.3"
rust-embed = "3.0.2"
csv = "1.0.2"
open = "1.2.2"